Stop the flicker of the advanced options

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -437,3 +437,7 @@ ot-subscriber mute-video .cross-icon {
     top: 7px;
     left: 2px;
 }
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
